--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@
 }
 body{
     color: #ffffff;
-    background-image: url(../image/2070977-white-and-light-blue-gradiente-vertical-bold-line-seamless-pattern-background-and-texture-vetor.jpg);
+    background-image: url(../image/speed.jpg);
 
 }
 header{
-    box-shadow: 0px 7px 15px #1a0dcd;
+    box-shadow: 0px 10px 15px #0dc7cd;
     background-color: #a31dd5;
     padding: 10px;
     align-items: center;
@@ -38,6 +38,7 @@ main{
     align-items: center;
 }
 #contato, form {
+    
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -54,4 +55,75 @@ footer{
     align-items: center;
     background-color: #a31dd5;
     padding: 10px;
+}
+.welcome {
+    text-align: center;
+}
+#htmlback{
+   
+    display: flex;
+    background-color: #6a088e;
+    box-shadow: 0px 7px 15px #12d2e8;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+#sobre{
+    margin-left: 3%;
+    text-align: left;
+    word-spacing: 9px;
+}
+
+#sobretit{
+    text-align: center;
+}
+.opa{
+
+    position: absolute;
+    left: 900px;
+}
+#button {
+    background-color: #12d2e8;
+    color:#010000
+}
+#htmlback:hover{
+
+    display: flex;
+    background-color: #6a088e;
+    box-shadow: 0px 7px 50px #12d2e8;
+    margin-left: 20%;
+    margin-right: 20%;
+    transition: 2.5s ;
+    
+}
+
+#htmlback
+{
+        opacity:0.5;
+        transition: 1s;
+}
+#htmlback:hover
+{       
+        opacity:1;
+        transition: 1s;
+}
+
+#htmlback:hover
+{
+        -xpedu-transform: rotatez(-30deg);
+        -ms-transform: rotateZ(-30deg);
+        transform: rotateZ(-360deg);
+        
+    }
+
+.of {
+    justify-content: center;
+    position: absolute ;
+    align-items: center;
+    flex-direction: column;
+}
+.of{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
