--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ transform: scale(1.05);
     position: absolute ;
     align-items: center;
     flex-direction: column;
+   
 }
 .of{
     display: flex;
@@ -182,6 +183,12 @@ transform: scale(1.05);
   text-align: center;
   margin-top: +110px;
 }
+
+
+.titulojava{
+margin-left: -3vw;
+}
+
 .tituloling::before {
   content: attr(data-text);
   position: absolute;
@@ -217,6 +224,7 @@ transform: scale(1.05);
     width: 40%;
     /* Define um espaço de margem à direita */
     margin-right: 20px;
+    margin-left: -3vw;
   }
   
   .javaling h2 {
@@ -521,6 +529,7 @@ transform: scale(1.05);
         .container {
           display: flex;
           flex-direction: row;
+         position: absolute;
         }
         
         .radio-wrapper {
@@ -528,7 +537,7 @@ transform: scale(1.05);
           height: 38px;
           width: 310px;
           margin: 3px;
-      
+          z-index: 6;
         }
         
         .radio-wrapper .input {
@@ -625,6 +634,7 @@ transform: scale(1.05);
           clip-path: var(--clip);
           animation: glitch 2s infinite;
           display: none;
+          
         }
         
         .input:hover + .btn .btn__glitch {
@@ -951,4 +961,108 @@ margin-left: +70vh;
     -webkit-text-fill-color: transparent;
    text-shadow: #8a2be2;
     text-align: center;
+}
+
+.redespc{
+  margin-top: +10vh;
+}
+
+li{
+  margin-left: +3vw;
+}
+
+
+.tituloautomacao{
+  margin-top: +5vh;
+  font-size: +30vh;
+  text-align: center;
+  background-color: #140b17;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 70px;
+    background: linear-gradient(45deg, #462020, #9a2b79, #000000 );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+   text-shadow: #8a2be2;
+    text-align: center;
+}
+
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer p {
+  margin: 0;
+}
+
+.fotocomputador{
+  margin-left: 33vw;
+}
+
+.robo{
+  margin-left: 20vw;
+  width: -300px;
+  height: -4vh;
+}
+
+.automacaotext {
+ 
+  align-items: center;
+  position: relative;
+  left: 10vh;
+  max-width: 150vh;
+  background-color: #1d1e22da;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  padding: 2px;
+}
+
+
+.fotosemaforo{
+  width: 700px;
+  height: 400px;
+ 
+  border-radius: 30px;
+}
+
+.automacaointrocucao{
+  display: flex;
+  flex-direction: row;
+  margin-top: +10vh;
+}
+
+#value-2{
+  transition: 2s;
+}
+
+.video-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 700px;
+  margin-left: +27vw;
+  margin-top: +10vw;
+  margin-bottom: +20vw;
+}
+
+.videozinho{
+  width: +500px;
+}
+
+.textovideoo{
+  margin-top: +5vw;
 }
