--- a/css/style.css
+++ b/css/style.css
@@ -773,7 +773,7 @@ video {
  
   align-items: center;
   position: relative;
-  left: 10vh;
+  left: 5vh;
   max-width: 200vh;
   background-color: #1d1e22da;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
@@ -844,11 +844,12 @@ margin-left: +70vh;
 .imagenstrabrede{
   flex-direction: row;
   margin-top: +7vh;
-  padding: +8.5vh;
+ margin-left: 7vw;
+ 
 }
 
 .photo1{
-  width: 97vh;
+  width: 86vh;
   height: 30vw;
   border-radius: 7%;
 }
@@ -1106,3 +1107,21 @@ border-radius: 30px;
   margin-top: +8vh;
   margin-bottom: +5vh;
 }
+
+.cssimg{
+  width: 4vw;
+  height: 20vh;
+}
+.javaimg{
+  width: 4vw;
+  height: 20vh;
+}
+.htmlimg{
+  width: 4vw;
+  height: 20vh;
+}
+.pythonimg{
+  width: 4vw;
+  height: 20vh;
+}
+
