--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     padding: 0;
 }
 body{
+  font-size: 1em;
   font-family: 'Roboto', sans-serif;
   background: rgb(255,255,255);
 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,193,246,1) 35%, rgba(251,207,245,1) 73%, rgba(255,255,255,1) 100%);
