--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 body{
-  font-size: 1em;
+
   font-family: 'Roboto', sans-serif;
   background: rgb(255,255,255);
 background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,193,246,1) 35%, rgba(251,207,245,1) 73%, rgba(255,255,255,1) 100%);
@@ -536,8 +536,8 @@ margin-left: -3vw;
         
         .radio-wrapper {
           position: relative;
-          height: 38px;
-          width: 310px;
+          height: 4vh;
+          width: 19.5vw;
           margin: 3px;
           z-index: 6;
       
@@ -779,7 +779,7 @@ video {
   background-color: #1d1e22da;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
-  padding: 2px;
+ margin-left: -2vw;
 }
 
 .header {
